--- a/src/main/resources/hibrnate.cfg.xml.example
+++ b/src/main/resources/hibrnate.cfg.xml.example
@@ -4,9 +4,9 @@
 <hibernate-configuration>
     <session-factory>
         <property name="connection.driver_class">com.mysql.jdbc.Driver</property>
-        <property name="connection.url">jdbc:mysql://localhost:3306/pd2</property>
-        <property name="connection.username">bekas</property>
-        <property name="connection.password">password</property>
+        <property name="connection.url">jdbc:mysql://localhost:3306/DBNAME</property>
+        <property name="connection.username">DBUSER</property>
+        <property name="connection.password">DBPASS</property>
         <property name="connection.pool_size">10</property>
         <property name="dialect">org.hibernate.dialect.MySQLDialect</property>
         <property name="show_sql">true</property>
